test/corpus/literals.txt
================================================================================
Integers
================================================================================

-1
0xDEAD
0XDEAD
0b001
0B001

--------------------------------------------------------------------------------

(module
  (expression_statement
    (unary_operator
      (integer)))
  (expression_statement
    (integer))
  (expression_statement
    (integer))
  (expression_statement
    (integer))
  (expression_statement
    (integer)))

================================================================================
Floats
================================================================================

-.6_6
+.1_1
123.4123
.3e1

--------------------------------------------------------------------------------

(module
  (expression_statement
    (unary_operator
      (float)))
  (expression_statement
    (unary_operator
      (float)))
  (expression_statement
    (float))
  (expression_statement
    (float)))

================================================================================
Scientific Notation Floats
================================================================================

1e322
1e-3
1e+3
1.8e10
1.e10
-1e10

--------------------------------------------------------------------------------

(module
  (expression_statement
    (float))
  (expression_statement
    (float))
  (expression_statement
    (float))
  (expression_statement
    (float))
  (expression_statement
    (float))
  (expression_statement
    (unary_operator
      (float))))

================================================================================
Complex
================================================================================

1 + 3.2i
3j

--------------------------------------------------------------------------------

(module
  (expression_statement
    (binary_operator
        (integer)
        (complex 
            (float))))
  (expression_statement
    (complex
        (integer))))

================================================================================
Strings
================================================================================

"";
'';
"\"";
"a\"b";
'\'';
'a\'b';
"it's a tiny tiny world";
'"hello"';
"hello %g";
"%0.2s %s hello";

-----------------------------------------------------------------------

(module
  (expression_statement 
    (string))
  (expression_statement 
    (string))
  (expression_statement 
    (string 
          (escape_sequence)))
  (expression_statement
    (string 
        (string_fragment)
          (escape_sequence)
          (string_fragment)))
  (expression_statement 
    (string 
          (escape_sequence)))
  (expression_statement
    (string 
        (string_fragment)
          (escape_sequence)
          (string_fragment)))
  (expression_statement
    (string
      (string_fragment)))
  (expression_statement
    (string
      (string_fragment)))
  (expression_statement 
    (string 
        (string_fragment)
        (format_specifier)))
  (expression_statement 
    (string 
        (format_specifier)
        (string_fragment)
        (format_specifier)
        (string_fragment))))

================================================================================
Other primitives
================================================================================

true
false

--------------------------------------------------------------------------------

(module
  (expression_statement
    (true))
  (expression_statement
    (false)))

================================================================================
Matrices
================================================================================

[a, b, c]
[1 2; 1, 2];

--------------------------------------------------------------------------------

(module
  (expression_statement
    (matrix
      (identifier)
      (identifier)
      (identifier)))
  (expression_statement
    (matrix
      (integer)
      (integer)
      (integer)
      (integer))))
  

================================================================================
Cell arrays
================================================================================

{a, b, c}
{1 2; 1, 2};

--------------------------------------------------------------------------------

(module
  (expression_statement
    (cell
      (identifier)
      (identifier)
      (identifier)))
  (expression_statement
    (cell
      (integer)
      (integer)
      (integer)
      (integer))))
