test/corpus/statements.txt
================================================================================
Expression statements
================================================================================

a
b + c
d \ e

--------------------------------------------------------------------------------

(module
  (expression_statement
    (identifier))
  (expression_statement
    (binary_operator
      (identifier)
      (identifier)))
  (expression_statement
    (binary_operator
      (identifier)
      (identifier))))

================================================================================
Control-flow statements
================================================================================

while true
  continue
  break

--------------------------------------------------------------------------------

(module
  (while_statement
    condition: (true)
    body: (block
      (continue_statement)
      (break_statement))))

================================================================================
If statements
================================================================================

if a
  b
  c

--------------------------------------------------------------------------------

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement
        (identifier))
      (expression_statement
        (identifier)))))

================================================================================
If else statements
================================================================================

if a
  b
elseif c
  d
else
  f

if a
  b
else
  f

--------------------------------------------------------------------------------

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement
        (identifier)))
    alternative: (elseif_clause
      condition: (identifier)
      consequence: (block
        (expression_statement
          (identifier))))
    alternative: (else_clause
      body: (block
        (expression_statement
          (identifier)))))
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement
        (identifier)))
    alternative: (else_clause
      body: (block
        (expression_statement
          (identifier))))))

================================================================================
Nested if statements
================================================================================

if a
  if b
    c
  else
    if e
      f
g

--------------------------------------------------------------------------------

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (if_statement
        condition: (identifier)
        consequence: (block
          (expression_statement
            (identifier)))
        alternative: (else_clause
          body: (block
            (if_statement
              condition: (identifier)
              consequence: (block
                (expression_statement
                  (identifier)))))))))
  (expression_statement
    (identifier)))

================================================================================
While statements
================================================================================

while a
  b

while c
  d
else
  e
  f

--------------------------------------------------------------------------------

(module
  (while_statement
    condition: (identifier)
    body: (block
      (expression_statement
        (identifier))))
  (while_statement
    condition: (identifier)
    body: (block
      (expression_statement
        (identifier)))
    alternative: (else_clause
      body: (block
        (expression_statement
          (identifier))
        (expression_statement
          (identifier))))))

================================================================================
For statements
================================================================================

for i = 1:10
  a
  for j = 1:10
    b
else
  c

--------------------------------------------------------------------------------

(module
  (for_statement
    left: (identifier)
    right: (slice 
        (integer)
        (integer))
    body: (block
      (expression_statement
        (identifier))
      (for_statement
        left: (identifier)
        right: (slice 
        (integer)
        (integer))
        body: (block
          (expression_statement
            (identifier)))))
    alternative: (else_clause
      body: (block
        (expression_statement
            (identifier))))))

================================================================================
Function definitions
================================================================================

function func_name(a, b) 
  a = 3
end

function return_type = function_name(a, b)
  a = 3
end

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier))
    body: (block
    (expression_statement
      (assignment
          left: (identifier)
          right: (integer)))))
(function_definition
    return_variable: (return_value (identifier))
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier))
    body: (block
    (expression_statement
      (assignment
          left: (identifier)
          right: (integer))))))

================================================================================
Empty blocks
================================================================================
function a(b, c)

if d
  while f()

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier))
    body: (block))
  (if_statement
    condition: (identifier)
    consequence: (block
      (while_statement
        condition: (call_or_subscript
          value: (identifier))
        body: (block)))))

================================================================================
Comments
================================================================================

a
% hi
b % bye
c

--------------------------------------------------------------------------------

(module
  (expression_statement
    (identifier))
  (comment)
  (expression_statement
    (identifier))
  (comment)
  (expression_statement
    (identifier)))

================================================================================
Comments at different indentation levels
================================================================================

if a
  % one
% two
    % three
  b
    % four
  c

--------------------------------------------------------------------------------

(module
  (if_statement
    (identifier)
    (comment)
    (comment)
    (comment)
    (block
      (expression_statement
        (identifier))
      (comment)
      (expression_statement
        (identifier)))))

================================================================================
Comments after dedents
================================================================================

if a
  b

% one
c

--------------------------------------------------------------------------------

(module
  (if_statement
    (identifier)
    (block
      (expression_statement
        (identifier))))
  (comment)
  (expression_statement
    (identifier)))

================================================================================
Comments at the ends of indented blocks
================================================================================

if a
  b
  % one
  % two

if c
  d
    % three
      % four

% five

--------------------------------------------------------------------------------

(module
  (if_statement
    (identifier)
    (block
      (expression_statement
        (identifier))
      (comment)
      (comment)))
  (if_statement
    (identifier)
    (block
      (expression_statement
        (identifier))
      (comment)
      (comment)))
  (comment))

================================================================================
Extra newlines
================================================================================

if a


    b()


    c()


    function d()


        e()


    f()

--------------------------------------------------------------------------------

(module
  (if_statement
    (identifier)
    (block
      (expression_statement
        (call_or_subscript
          (identifier)))
      (expression_statement
        (call_or_subscript
          (identifier)))
      (function_definition
        (identifier)
        (parameters)
        (block
          (expression_statement
            (call_or_subscript
              (identifier)))))
      (expression_statement
        (call_or_subscript
          (identifier))))))

================================================================================
Statements with semicolons
================================================================================

foo;
foo; bar
foo; bar;

--------------------------------------------------------------------------------

(module
  (expression_statement
    (identifier))
  (expression_statement
    (identifier))
  (expression_statement
    (identifier))
  (expression_statement
    (identifier))
  (expression_statement
    (identifier)))
